--- a/services/client-ui/src/components/skeleton/skeleton.scss
+++ b/services/client-ui/src/components/skeleton/skeleton.scss
@@ -1,5 +1,7 @@
 .logo {
-  height: 32px;
+  width: 120px;
+  height: 31px;
   background: rgba(255, 255, 255, 0.2);
-  margin: 16px;
+  margin: 16px 28px 16px 0;
+  float: left;
 }
